# sap-graph-rag-migration-engine

./: README.md
.github/workflows/: ci.yml
kg-migration-engine/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  Makefile  README.md  docker-compose.yml  pyproject.toml
kg-migration-engine/.claude/: settings.json
kg-migration-engine/.claude/hooks/: protect-raw-data.sh
kg-migration-engine/cypher/: 05_verify.cypher  README.md
kg-migration-engine/data/raw/: kg_data_dictionary.csv  kg_edges.csv  kg_nodes.csv  kg_process_master.csv
kg-migration-engine/docs/: AUDIT.md  BACKUP_RESTORE.md  DEMO_QUESTIONS.md  HANDOFF_DETAIL.md  IMPLEMENTATION_PLAN.md  TECHNICAL_REFERENCE.md
kg-migration-engine/docs/plans/: phase1-restructuring.md  phase2-disposition-enrichment.md  phase3-slice1-as-is-agent.md  phase3-slice2-mapping-compliance-agents.md  phase3-slice3-langgraph-orchestration-eval-harness.md  phase4-api-dashboard.md  s4-simplification-enrichment.md
kg-migration-engine/src/kgme/: __init__.py  cli.py  config.py  logging.py
kg-migration-engine/tests/contract/: test_data_dictionary_contract.py
kg-migration-engine/tests/eval/: test_agents_eval.py
kg-migration-engine/tests/fixtures/: kg_edges_fixture.csv  kg_nodes_fixture.csv  s4_catalog_fixture.json
kg-migration-engine/tests/integration/: conftest.py  test_api.py  test_as_is.py  test_compliance.py  test_dashboard.py  test_disposition.py  test_gaps.py  test_graph.py  test_health.py  test_loader.py  test_mapping.py  test_s4_simplification.py  test_schema_context.py
(+51 files in other folders)
