[project]
name = "kgme"
version = "0.1.0"
description = "Value-Stream GraphRAG Migration Engine (SAP ECC->S/4HANA as-is KG)"
requires-python = ">=3.12"
dependencies = [
    "falkordb>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "anthropic>=0.40",
    "langgraph>=0.2",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "testcontainers>=4.5",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kgme"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "PTH", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["testcontainers.*", "falkordb.*"]
ignore_missing_imports = true

[project.scripts]
kgme-load = "kgme.cli:main_load"
kgme = "kgme.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: needs Docker/testcontainers (slower)",
    "contract: validates data/raw against the data dictionary (slow, data-focused)",
    "eval: golden-question regression net, needs a real Anthropic API key + loaded graph (manual only, never in CI)",
]

[tool.coverage.run]
source = ["src/kgme"]
